--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "mongoose": "^8.19.0",
     "uuid": "^13.0.0"
   }
 }
