--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "license": "ISC",
   "author": "",
-  "type": "module",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "nodemon src/index.js",
-    "seed": "node src/infrastructure/seed.js"
+    "dev": "nodemon src/index.ts",
+    "seed": "ts-node src/infrastructure/seed.ts",
+    "build": "npm install && tsc",
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
@@ -17,6 +18,11 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "@types/express": "^5.0.3",
+    "@types/mongoose": "^5.11.96",
+    "@types/node": "^24.7.0",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
