--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "main": "src/index.ts",
   "scripts": {
     "dev": "nodemon src/index.ts",
+    "dev:ngrok": "ngrok start back-end --config=ngrok.yml",
     "seed": "ts-node src/infrastructure/seed.ts",
     "build": "npm install && tsc",
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@clerk/express": "^1.7.48",
     "cors": "^2.8.5",
     "cros": "^1.1.0",
     "date-fns": "^4.1.0",
