--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.0",
+    "node-cron": "^4.2.1",
     "uuid": "^13.0.0",
     "zod": "^4.1.12"
   },
