--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "dev:ngrok": "ngrok start back-end --config=ngrok.yml",
-    "seed": "ts-node src/infrastructure/seed.ts",
+    "seed": "ts-node src/infrastructure/temp/production-seed.ts",
     "build": "npm install && tsc",
     "start": "node dist/index.js"
   },
