--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "back-end",
   "version": "1.0.0",
-  "description": "",
-  "license": "ISC",
-  "author": "",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
     "dev:ngrok": "ngrok start back-end --config=ngrok.yml",
     "seed": "ts-node src/infrastructure/temp/production-seed.ts",
     "build": "npm install && tsc",
-    "start": "node dist/index.js"
+    "start": "node ./dist/index.js"
   },
+  "license": "ISC",
+  "author": "",
+  "description": "",
   "dependencies": {
     "@clerk/express": "^1.7.48",
     "cors": "^2.8.5",
