--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,27 @@
+//{
+//  "compilerOptions": {
+//    "sourceMap": true,
+//    "outDir": "./dist",
+//    "strict": true,
+//    "lib": ["esnext"],
+//    "esModuleInterop": true,
+//    "skipLibCheck": true
+//  },
+//  "ts-node": {
+//    "files": true
+//  }
+//}
+
+
 {
   "compilerOptions": {
-    "sourceMap": true,
+    "target": "ES2020",
+    "module": "commonjs",
     "outDir": "./dist",
+    "rootDir": "./src",
     "strict": true,
-    "lib": ["esnext"],
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "ts-node": {
-    "files": true
-  }
+  "include": ["src/**/*"]
 }
