--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "back-end",
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "dev:ngrok": "ngrok start back-end --config=ngrok.yml",
+    "seed": "ts-node src/infrastructure/temp/production-seed.ts",
+    "build": "npm install && tsc",
+    "start": "node ./dist/index.js"
   },
   "license": "ISC",
   "author": "",
