--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,13 @@
-//{
-//  "compilerOptions": {
-//    "sourceMap": true,
-//    "outDir": "./dist",
-//    "strict": true,
-//    "lib": ["esnext"],
-//    "esModuleInterop": true,
-//    "skipLibCheck": true
-//  },
-//  "ts-node": {
-//    "files": true
-//  }
-//}
-
-
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
+    "sourceMap": true,
     "outDir": "./dist",
-    "rootDir": "./src",
     "strict": true,
+    "lib": ["esnext"],
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*"]
+  "ts-node": {
+    "files": true
+  }
 }
