--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@clerk/express": "^1.7.48",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "cros": "^1.1.0",
     "date-fns": "^4.1.0",
