--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.19.0",
     "node-cron": "^4.2.1",
+    "stripe": "^20.1.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.12"
   },
